--- a/reportsapp/templates/base.html
+++ b/reportsapp/templates/base.html
@@ -1,23 +1,26 @@
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/styles.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <title>Reports</title>
-    {% block datepicker %}{% endblock datepicker %}
-  </head>
-  <body>
-    <div id='cssmenu'>
-      <ul>
-        <li class="{% block nav_pop_devices_active %}{% endblock nav_pop_devices_active %}"><a href={% url 'popular_devices' %}><span>Popular devices</span></a></li>
-        <li class="{% block nav_filt_devices_active %}{% endblock nav_filt_devices_active %}"><a href={% url 'filter_devices' %}><span>Filter devices</span></a></li>
-      </ul>
-    </div>
-    {% block content %}{% endblock content %}
-  </body>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+        integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/styles.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+  <title>Reports</title>
+  {% block datepicker %}{% endblock datepicker %}
+</head>
+<body>
+<div id='cssmenu'>
+  <ul>
+    <li class="{% block nav_pop_devices_active %}{% endblock nav_pop_devices_active %}"><a
+      href={% url 'popular_devices' %}><span>Popular devices</span></a></li>
+    <li class="{% block nav_filt_devices_active %}{% endblock nav_filt_devices_active %}"><a
+      href={% url 'filter_devices' %}><span>Filter devices</span></a></li>
+  </ul>
+</div>
+{% block content %}{% endblock content %}
+</body>
 <html>
